# file-sense

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPROVEMENTS.md  LICENSE  README.md  estimate_memory.py  frontend_guidelines.md  main.py  pyproject.toml  start.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: EMBEDDING_OPTIMIZATION.md  HYBRID_SEARCH_FIX.md  HYBRID_SEARCH_OPTIMIZATION.md  OPTIMIZATION_SUMMARY.md  README_TESTS.md  deepeval_vs_ragas.md  docling_improvement_plan.md  index-manager-improvements.md  lightweight_indexing_plan.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx  style.css  types.ts
frontend/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/src/components/: CommandPalette.module.css  CommandPalette.tsx  FileIcon.css  FileIcon.tsx  FilePreview.css  FilePreview.tsx  FilterPanel.css  FilterPanel.tsx  IndexManager.css  IndexManager.tsx  IndexingToast.css  IndexingToast.tsx  ModeSelector.css  ModeSelector.tsx  PixelSnow.tsx  ResultItem.css  ResultItem.tsx  ResultsList.css  ResultsList.tsx  SearchInput.css  SearchInput.tsx  SettingsPanel.css  SettingsPanel.tsx  Spotlight.css  Spotlight.tsx  SystemStats.css  SystemStats.tsx  TrueFocus.css  TrueFocus.tsx
frontend/src/hooks/: useDebounce.ts  useGlobalShortcuts.ts  useKeyboardNav.ts  useSearch.ts
frontend/src/lib/: search.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/src/utils/: format.ts
src/: chunker.py  cli.py  embedding.py  main.py  ocr.py  pp.py
src/services/: __init__.py  adaptive_pipeline.py  hardware_detector.py  lightweight_faiss.py  lightweight_file_manager.py  milvus.py  onnx_embedder.py  paragraph_chunker.py  streaming_processor.py
src/services/document_loader/loaders/: docx_loader.py  ocr.py  txt.py
